// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Component service endpoint returns a component when the component has lines of codes renders the details of the lines of codes 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    Test Component Name 1 - Lines of Code
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
       Info 
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/diagrams"
      target="_self"
    >
      
    Diagrams
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      
    Errors
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      
    Tests
  
    </a>
  </div>
   
  <div
    class="card my-3"
  >
    <!---->
    <!---->
    <div
      class="card-body"
    >
      <h4
        class="card-title"
      >
        Total Lines of Code
      </h4>
      <!---->
      <div
        class="list-group"
      >
        <div
          class="list-group-item list-group-item-success"
        >
          <span
            class="display-1"
          >
            <span>
              1
            </span>
          </span>
          
        lines of code
      
        </div>
      </div>
    </div>
    <!---->
    <!---->
  </div>
   
  <div
    class="card"
  >
    <!---->
    <!---->
    <div
      class="card-body"
    >
      <h4
        class="card-title"
      >
        Lines of Code by File Extension
      </h4>
      <!---->
      <div
        class="list-group"
      >
        <div
          class="list-group-item d-flex justify-content-between align-items-center"
        >
          
        extension-1
        
          <span
            class="badge badge-primary badge-pill"
          >
            <span>
              102
            </span>
          </span>
        </div>
        <div
          class="list-group-item d-flex justify-content-between align-items-center"
        >
          
        extension-2
        
          <span
            class="badge badge-primary badge-pill"
          >
            <span>
              103
            </span>
          </span>
        </div>
        <div
          class="list-group-item d-flex justify-content-between align-items-center"
        >
          
        extension-3
        
          <span
            class="badge badge-primary badge-pill"
          >
            <span>
              104
            </span>
          </span>
        </div>
        <div
          class="list-group-item d-flex justify-content-between align-items-center"
        >
          
        extension-4
        
          <span
            class="badge badge-primary badge-pill"
          >
            <span>
              105
            </span>
          </span>
        </div>
        <div
          class="list-group-item d-flex justify-content-between align-items-center"
        >
          
        extension-5
        
          <span
            class="badge badge-primary badge-pill"
          >
            <span>
              106
            </span>
          </span>
        </div>
      </div>
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Index when Get Component service endpoint returns a component when the component has no lines of codes renders no lines of codes 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    Test Component Name 1 - Lines of Code
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
       Info 
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/diagrams"
      target="_self"
    >
      
    Diagrams
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      
    Errors
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      
    Tests
  
    </a>
  </div>
   
  <div
    class="card my-3"
  >
    <!---->
    <!---->
    <div
      class="card-body"
    >
      <h4
        class="card-title"
      >
        Total Lines of Code
      </h4>
      <!---->
      <div
        class="list-group"
      >
        <div
          class="list-group-item list-group-item-success"
        >
          <span
            class="display-1"
          >
            <span>
              0
            </span>
          </span>
          
        lines of codes
      
        </div>
      </div>
    </div>
    <!---->
    <!---->
  </div>
   
  <div
    class="card"
  >
    <!---->
    <!---->
    <div
      class="card-body"
    >
      <h4
        class="card-title"
      >
        Lines of Code by File Extension
      </h4>
      <!---->
      <div
        class="list-group"
      />
    </div>
    <!---->
    <!---->
  </div>
</div>
`;
